--- a/notesapp/src/main/resources/application.properties
+++ b/notesapp/src/main/resources/application.properties
@@ -16,3 +16,7 @@ jwt.expiration.ms=86400000
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
+
+# spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
